--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
-<%= form_for @user, url: "/users", html: { method: :post } do |f| %>
+<%= form_for @user, url: users_path, html: { method: :post } do |f| %>
   <p>投稿</p>
   <p>お名前：<%= f.text_field :name %></p>
   <p>年齢：<%= f.text_field :age %></p>
   <input type="submit"　value="送信">
 <% end %>
+  
